# amigo-engine

./: .editorconfig  .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLAN.md  Plan.me  README.md  amigo-spec-restructure-plan.md  amigo.toml  install.ps1  install.sh
.claude/: settings.local.json
.claude/skills/develop/: SKILL.md
.claude/skills/spec/: SKILL.md
.github/workflows/: ci.yml  nightly.yml  release.yml  wiki-sync.yml
crates/amigo_animation/: Cargo.toml
crates/amigo_animation/src/: lib.rs
crates/amigo_api/: Cargo.toml
crates/amigo_api/src/: handler.rs  lib.rs  (+3 more)
crates/amigo_assets/: Cargo.toml
crates/amigo_assets/src/: aseprite.rs  asset_manager.rs  descriptors.rs  formats.rs  handle.rs  hot_reload.rs  import.rs  lib.rs  modding.rs  pak.rs  registry.rs  streaming.rs
crates/amigo_audio/: Cargo.toml
crates/amigo_audio/src/: graph.rs  lib.rs  spatial.rs
crates/amigo_audio_pipeline/: Cargo.toml
crates/amigo_audio_pipeline/src/: config.rs  conversion.rs  lib.rs  pipeline.rs  postprocess.rs  separation.rs  transcription.rs
crates/amigo_core/: Cargo.toml
crates/amigo_core/src/: accessibility.rs  achievements.rs  agents.rs  ai.rs  auto_battler.rs  behavior_tree.rs  broad_phase.rs  bullet_pattern.rs  card.rs  city_builder.rs  collision.rs  collision_events.rs  color.rs  combat.rs  command.rs  crafting.rs  deckbuilder.rs  dialog.rs  door.rs  economy.rs  enemy.rs  events.rs  farming.rs  fighting.rs  fog_of_war.rs  frame_arena.rs  game_preset.rs  game_state.rs  idle.rs  inventory.rs  level_loader.rs  lib.rs  localization.rs  loot.rs  math.rs  metroidvania.rs  navigation.rs  pathfinding.rs  physics.rs  platformer.rs  (+30 more)
crates/amigo_core/src/ecs/: archetype.rs  bitset.rs  change_detection.rs  entity.rs  mod.rs  query.rs  schedule.rs  sparse_set.rs  system.rs  world.rs
crates/amigo_debug/: Cargo.toml
crates/amigo_debug/src/: lib.rs  profiler.rs
crates/amigo_editor/: Cargo.toml
crates/amigo_editor/src/: auto_path.rs  collision_editor.rs  editor_v2.rs  egui_ui.rs  heatmap.rs  inspector.rs  lib.rs  play_state.rs  playtest.rs  plugin.rs  tidal_playground.rs  ui.rs  visual_script.rs  wave_editor.rs  wizard.rs  wizard_ui.rs
crates/amigo_engine/: Cargo.toml
crates/amigo_engine/src/: config.rs  context.rs  engine.rs  lib.rs  splash.rs
crates/amigo_input/: Cargo.toml
crates/amigo_net/: Cargo.toml
crates/amigo_net/src/: checksum.rs  client.rs  lib.rs  lobby.rs  protocol.rs  replay.rs  rollback.rs  server.rs  stats.rs  sync.rs  udp.rs
crates/amigo_reflect/: Cargo.toml
crates/amigo_reflect_derive/: Cargo.toml
crates/amigo_render/: Cargo.toml
crates/amigo_render/src/: atlas.rs  atmosphere.rs  bitmap_font.rs  camera.rs  dynamic_atlas.rs  egui_integration.rs  font.rs  gpu_broad_phase.rs  gpu_broad_phase.wgsl  instancing.rs  lib.rs  lighting.rs  minimap.rs  particles.rs  post_process.rs  renderer.rs  sprite_batcher.rs  texture.rs  vertex.rs
crates/amigo_scene/: Cargo.toml
crates/amigo_steering/: Cargo.toml
crates/amigo_tidal_parser/: Cargo.toml
crates/amigo_tilemap/: Cargo.toml
crates/amigo_ui/: Cargo.toml
docs/: README.md  ai-integration.md  amigo-engine-spec-v2.md  amigo-game-setup.md  amigo-td-ui-spec.md  architecture.md  genre-modules.md  getting-started.md  plugin-guide.md  review-engine-docs.md  threadwalker-art-prompts.md  tricks-patterns.md  tricks.md
docs/adrs/: 0001-ecs-archetype-storage.md  0002-system-graph.md  0003-incremental-change-detection.md  0004-async-task-system.md  0005-asset-streaming.md  0006-cross-platform-determinism.md  0007-rollback-netcode.md  0008-gpu-compute-physics.md  0009-audio-graph.md  0010-audio-graph.md  0010-editor-v2.md  0011-ui-retained-mode.md  0012-editor-v2.md  0012-hierarchical-scenes.md  0013-ai-native-engine-vision.md  0013-ui-retained-mode.md  0014-hierarchical-scenes.md  0015-ai-native-engine-vision.md
docs/plans/: 01-engine-spec.md  01-review-engine-docs.md  02-review-engine-setup.md  02-td-spec.md  03-asset-pipeline-spec.md  03-review-engine-setup.md  README.md
docs/specs/: 01-engine-spec.md  02-asset-pipeline-spec.md  03-asset-format-spec.md  04-review-specs.md  05-sandbox-godsim-gaps.md  STATUS.md  _conventions.md  _index.md  amigo-asset-format-spec-v2.md  artgen-backend-abstraction.md  conventions.md  fog-of-war.md  index.md  spline.md
docs/wiki/: AI-Setup.md  Architecture.md  Audio-Pipeline.md  CLI-Reference.md  Getting-Started.md  Home.md  Installation.md  Specifications.md  TidalCycles.md
examples/animation_demo/: Cargo.toml
examples/audio_demo/: Cargo.toml
examples/ecs_demo/: Cargo.toml
examples/input_demo/: Cargo.toml
examples/particles/: Cargo.toml
examples/pathfinding_demo/: Cargo.toml
examples/starter/: Cargo.toml  amigo.toml  input.ron
examples/starter/assets/audio/: README
examples/starter/assets/data/: level.ron  player.ron
examples/starter/src/: data.rs  game.rs  main.rs  player.rs
examples/starter/src/states/: loading.rs  menu.rs  mod.rs  playing.rs
examples/tilemap_demo/: Cargo.toml
games/amigo_td/: Cargo.toml
games/amigo_td/src/: main.rs
scripts/: screenshots.sh
specs/active/: audiogen-comfyui-migration.md
styles/: caribbean.style.ron  dune.style.ron  got.style.ron  lotr.style.ron  matrix.style.ron  stranger_things.style.ron
tools/: gen_pixel_font.py
tools/amigo_artgen/: Cargo.toml
tools/amigo_artgen/src/: comfyui.rs  config.rs  lib.rs  main.rs  postprocess.rs  style.rs  tools.rs  workflows.rs
tools/amigo_artgen/workflows/: img2img_variation.json  inpaint.json  spritesheet.json  tileset.json  txt2img_sprite.json  upscale.json
tools/amigo_audiogen/: Cargo.toml
tools/amigo_audiogen/src/: acestep.rs  audiogen.rs  clean_mode.rs  config.rs  lib.rs  main.rs  processing.rs  stems.rs  style_registry.rs  tools.rs  voice_registry.rs
tools/amigo_audiogen/src/workflows/: mod.rs  music.rs  sfx.rs  tts.rs
tools/amigo_cli/: Cargo.toml
tools/amigo_cli/src/: main.rs  pipeline_cmd.rs  setup.rs
tools/amigo_comfyui/: Cargo.toml
tools/amigo_comfyui/src/: lib.rs
tools/amigo_mcp/: Cargo.toml
(+124 files in other folders)
