[package]
name = "amigo_assets"
version.workspace = true
edition.workspace = true

[dependencies]
amigo_core = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
asefile = { workspace = true }
amigo_animation = { workspace = true }
