[package]
name = "amigo_audio"
version.workspace = true
edition.workspace = true

[features]
default = []
audio_graph = []

[dependencies]
amigo_core = { workspace = true }
kira = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
