[package]
name = "amigo_audio_pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio-to-TidalCycles pipeline for Amigo Engine"

[dependencies]
amigo_tidal_parser = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
