[package]
name = "amigo_core"
version.workspace = true
edition.workspace = true

[features]
default = []
td = []
reflect = ["amigo_reflect"]
system_graph = ["rayon"]

[dependencies]
amigo_reflect = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
fixed = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
bumpalo = { workspace = true }
