[package]
name = "amigo_editor"
version.workspace = true
edition.workspace = true

[features]
default = []
td = ["amigo_core/td"]

[dependencies]
amigo_core = { workspace = true }
amigo_render = { workspace = true }
amigo_ui = { workspace = true }
amigo_input = { workspace = true }
amigo_tilemap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
serde_json = { workspace = true }
winit = { workspace = true }
