[package]
name = "amigo_editor"
version.workspace = true
edition.workspace = true

[features]
default = []
td = ["amigo_core/td"]
egui = ["dep:egui"]
editor_v2 = ["egui", "amigo_reflect", "amigo_core/reflect"]

[dependencies]
amigo_core = { workspace = true }
amigo_render = { workspace = true }
amigo_ui = { workspace = true }
amigo_input = { workspace = true }
amigo_tilemap = { workspace = true }
amigo_tidal_parser = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
serde_json = { workspace = true }
winit = { workspace = true }
egui = { workspace = true, optional = true }
amigo_reflect = { workspace = true, optional = true }
