[package]
name = "amigo_net"
version.workspace = true
edition.workspace = true

[features]
default = []
rollback_net = []

[dependencies]
amigo_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
