[package]
name = "amigo_render"
version.workspace = true
edition.workspace = true

[features]
default = []
editor = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]
asset_streaming = []
gpu_physics = []

[dependencies]
amigo_core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
rustc-hash = { workspace = true }
fontdue = { workspace = true }
serde = { workspace = true }
egui = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }

[dev-dependencies]
pollster = { workspace = true }
