[package]
name = "amigo_starter"
version.workspace = true
edition.workspace = true

[[bin]]
name = "starter"
path = "src/main.rs"

[dependencies]
amigo_engine = { workspace = true }
amigo_core = { workspace = true }
amigo_render = { workspace = true }
amigo_input = { workspace = true }
amigo_tilemap = { workspace = true }
amigo_scene = { workspace = true }
amigo_ui = { workspace = true }
amigo_debug = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
