[package]
name = "amigo_artgen"
version = "0.1.0"
edition = "2021"
description = "MCP server for AI art generation via ComfyUI"

[[bin]]
name = "amigo-artgen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
ron = "0.8"
