[package]
name = "amigo_audiogen"
version = "0.1.0"
edition = "2021"
description = "MCP server for AI audio generation (ACE-Step music, AudioGen SFX)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
ureq = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
