[package]
name = "amigo_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "amigo"
path = "src/main.rs"

[dependencies]
amigo_core = { workspace = true }
amigo_assets = { workspace = true }
amigo_editor = { workspace = true }
amigo_render = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
image = { workspace = true }
