[package]
name = "amigo_comfyui"
version = "0.1.0"
edition = "2021"
description = "Shared ComfyUI client for AI generation pipelines (artgen, audiogen)"

[dependencies]
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
ureq = { workspace = true }
